<resources>
    <string name="app_name">Preguntas App</string>
    <string name="title">Grupo #6</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="countries">
        <item>Escoje un país</item>
        <item>Ecuador</item>
        <item>Colombia</item>
        <item>Perú</item>
        <item>Venezuela</item>
        <item>Chile</item>
        <item>Argentina</item>
        <item>Brasil</item>
        <item>Uruguay</item>
        <item>Paraguay</item>
        <item>Bolivia</item>
    </string-array>

    <string name="radio_masculino">Masculino</string>
    <string name="radio_femenino">Femenino</string>

    <string name="nuevo">Nuevo</string>
    <string name="document">Documento</string>
    <string name="presentation">Presentación</string>
    <string name="settings">Ajustes</string>
    <string name="datos_sd">Mostrar Datos</string>
    <string name="about_us">Acerca de</string>

    <string name="dialog_title">Guardar Sessión</string>
    <string name="dialog_message">¿Desea mantener activa la sessión?</string>
    <string name="dialog_positive">Guardar</string>
    <string name="dialog_cancel">No Guardar</string>
    <string name="borrar_preferencias">Borrar Preferencias</string>
</resources>